@@ -39,6 +39,8 @@
 25. Improve radiance CSS theme.
 24. Use 24px playback icons if the icon theme has these.
 25. When AudioCD is ejected, remove tracks from playqueue.
+26. If Cantata is passed cdda:// then it will load, and start to play, the
+    current AudioCD.
 
 1.0.3
 -----
